--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^4.20.1",
     "pdfkit": "^0.14.0",
+    "playwright": "^1.55.0",
     "puppeteer": "^21.5.2",
     "uuid": "^9.0.1",
     "ws": "^8.14.2"
